# dcap-test

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain
SGXDataCenterAttestationPrimitives/QuoteGeneration/: Makefile
SGXDataCenterAttestationPrimitives/QuoteVerification/dcap_quoteverify/: sgx_dcap_pcs_com.cpp
SGXDataCenterAttestationPrimitives/QuoteVerification/dcap_quoteverify/linux/: sgx_dcap_quoteverify.lds
doc/: output.sample
generation/: Cargo.toml  rust-toolchain
generation/gramine-build/: Makefile  dcap-generation-test.manifest.template  gramine-dir
generation/src/: main.rs  quote_generator.rs
gramine-build/: Makefile  dcap-test.manifest.template
intel/QuoteVerification/dcap_quoteverify/: dcap_quoteverify_api.txt  sgx_dcap_quoteverify.cpp  tee_qv_class.cpp
intel/QuoteVerification/dcap_quoteverify/AttestationLibrary_untrusted/: AttestationLibrary_untrusted.vcxproj
intel/QuoteVerification/dcap_quoteverify/inc/: sgx_dcap_quoteverify.h  tee_qv_class.h
intel/QuoteVerification/dcap_quoteverify/linux/: Makefile  config.cpp  sgx_dcap_quoteverify.lds
intel/QuoteVerification/dcap_quoteverify/sgx-dcap-quoteverify-rs/src/: lib.rs
intel/QuoteVerification/dcap_quoteverify/win/: sgx_dcap_quoteverify.def
misc/QuoteVerificationSample/: Makefile
misc/QuoteVerificationSample/App/: App.cpp
sample/: quote
sample/quote_collateral/: pck_crl  pck_crl_issuer_chain  qe_identity  root_ca_crl  tcb_info
src/: main.rs  quote_generator.rs  quote_verifier.rs
src/qe_identity/: mod.rs
src/quote/: mod.rs
src/quote_collateral/: mod.rs
src/tcb/: mod.rs
src/tcb_info/: mod.rs
