[package]
name = "dcap-test"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
webpki = "0.22.0"
serde_json = { version = "1.0.85", default-features = false, features = ["alloc"] }
anyhow = "1.0"
sgx-dcap-quoteverify-rs = { path = "vendor/sgx-dcap-quoteverify-rs"}

hex = "*"
