[package]
name = "dcap-test"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
byteorder = { version = "1", default-features = false }
chrono = { version = "0.4.22", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0.144", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.85", default-features = false, features = ["alloc"] }
x509-cert = { version = "0.1.0", default-features = false, features = ["alloc", "pem"] }
der = { version = "0.6.0", default-features = false, features = ["alloc", "pem"] }
ecdsa = { version = "0.14.7", default-features = false, features = ["alloc", "pem"] }
p256 = { version = "0.11.1", default-features = false, features = ["arithmetic", "ecdsa", "pkcs8"] }

ring = { version = "0.16.20", default-features = false, features = ["alloc"] }
webpki = { version = "0.22.0", default-features = false, features = ["alloc"] }
#rustls-pemfile = { version = "1.0.1" }

pem = "1"

log = { version = "0.4.17", default-features = false }
anyhow = "1.0"
