[package]
name = "dcap-generation-test"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["alloc", "serde"] }
sgx-dcap-quoteverify-rs = { path = "../vendor/sgx-dcap-quoteverify-rs" }

log = { version = "0.4.17", default-features = false }
anyhow = "1.0"
